<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="paulryan.libby.MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/adventure_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:background="@drawable/text_view_color"
            android:onClick="onAdventuresClicked"
            android:text="@string/adventure_text_view_text" />

        <TextView
            android:id="@+id/classics_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:background="@drawable/text_view_color"
            android:onClick="onClassicsClicked"
            android:text="@string/classics_text_view_text" />

        <TextView
            android:id="@+id/detectives_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:background="@drawable/text_view_color"
            android:onClick="onDetectivesClicked"
            android:text="@string/detectives_text_view_text" />

        <TextView
            android:id="@+id/horror_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"
            android:background="@drawable/text_view_color"
            android:onClick="onHorrorClicked"
            android:text="@string/horror_text_view_text" />

        <TextView
            android:id="@+id/fantasy_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:background="@drawable/text_view_color"
            android:onClick="onFantasyClicked"
            android:text="@string/fantasy_text_view_text" />

        <TextView
            android:id="@+id/sci_fi_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:background="@drawable/text_view_color"
            android:onClick="onSciFiClicked"
            android:text="@string/sci_fi_text_view_text" />

        <TextView
            android:id="@+id/science_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:background="@drawable/text_view_color"
            android:onClick="onScienceClicked"
            android:text="@string/science_text_view_text" />

        <TextView
            android:id="@+id/poems_text_view"
            style="@style/MyMainTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"
            android:background="@drawable/text_view_color"
            android:onClick="onPoemsClicked"
            android:text="@string/poems_text_view_text" />
    </GridLayout>
</RelativeLayout>
