<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/book_bg_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/book_item_color"
            android:textSize="24sp"
            android:text="@string/add_text_view_text" />

        <EditText
            android:id="@+id/book_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/book_edit_text_text"
            android:textColor="@color/book_item_color"
            android:textColorHint="@color/book_item_color" />

        <EditText
            android:id="@+id/author_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/author_edit_text_text"
            android:textColor="@color/book_item_color"
            android:textColorHint="@color/book_item_color" />

        <EditText
            android:id="@+id/year_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/year_edit_text_text"
            android:inputType="numberSigned"
            android:textColor="@color/book_item_color"
            android:textColorHint="@color/book_item_color" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/ok_button"
                style="@style/MyBookButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@drawable/book_button"
                android:onClick="onOkButtonClicked"
                android:text="@string/ok_button_text"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/cancel_button"
                style="@style/MyBookButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_weight="1"
                android:background="@drawable/book_button"
                android:onClick="onCancelButtonClicked"
                android:text="@string/cancel_button_text"
                android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
